Fixed small CSS overflow issue for Prism

--- a/www/src/css/prism.scss
+++ b/www/src/css/prism.scss
@@ -3,7 +3,7 @@
   border-radius: 10px;
   color: #fff;
   -webkit-font-smoothing: antialiased;
-  overflow: hidden;
+  overflow: auto;
   tab-size: 1.5em;
 
   > code[class*="language-"],
